--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -14,5 +14,8 @@
         height: calc(100% - theme('spacing.24'));
         @apply flex
     }
+    .scrollable {
+        scroll-behavior: smooth;
+    }
 }
 
